Correction visibilité des boutons

--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button:not([class]) {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -55,11 +55,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button:not([class]):hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button:not([class]):focus,
+button:not([class]):focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -71,7 +71,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  button:not([class]) {
     background-color: #f9f9f9;
   }
 }
